   Remove 3 popup menu items to save space:
   Find Document Usage because Find Usage can be used instead.
   Go to Tag Declaration because Go to Tag Definition is more common.
   Go to Line because the toolbar item can be used instead.
 * src/tools.c, src/search.c, tagmanager/python.c:
   Fix some 'possible' NULL pointer dereferences (based on patch by
   Erik de Castro Lopo).


2010-09-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c:
   Use up/down icons for Previous/Next Error.
 * src/interface.c, src/keybindings.c, src/callbacks.c,
   src/callbacks.h, src/ui_utils.c, doc/geany.txt, doc/geany.html,
   geany.glade:
   Add Find Usage and Go to Tag items to Search menu for easier
   discovery.
 * tagmanager/tm_symbol.c:
   Fix possible NULL dereference.
 * HACKING:
   Add link to glade-2.12.2.tar.gz on geany.org.
 * doc/geany.txt, doc/geany.html:
   Mention the filetype wordchars setting can be overridden by the
   whitespace_chars filetypes.common setting.
 * src/highlighting.c, src/encodings.c, tagmanager/tm_file_entry.c:
   Remove NULL checks when calling g_free() (patch by Erik de Castro
   Lopo, thanks).
 * src/document.c:
   Show Save As when saving if the document filename doesn't have an
   absolute path, so command-line new files can be saved without a
   prompt, but file templates still prompt the user.


2010-09-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/build.c:
   Fix a memory leak. Based on input by Daniel Marjamäki. Thanks for the
   catch.


2010-09-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.h, src/msgwindow.c, src/msgwindow.h, src/main.c:
   Add GeanyMainWidgets::message_window_notebook for plugins to append
   a new notebook page (#3061342).
 * src/document.c:
   Add Close button to the detected file changed dialog.
 * src/interface.c, geany.glade:
   Add separator between Find Previous and Find in Files.
   Add up/down icons for Previous/Next Message.

